# bcc-media-voxtral

./: .dockerignore  .gitignore  Dockerfile  README.md  audio.py  pyproject.toml  srt.py  test_segmentation_fix.py  test_transcribe_audio.py  test_web_api.py  transcribe_audio.py  web_server.py
.github/workflows/: docker-build.yml
